CAmbios de colorimetria

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,15 +31,9 @@ import Header from "../sections/Header.astro";
     height: 100%;
   }
   .headerColor {
-    background: radial-gradient(
-      circle,
-      rgb(254, 129, 26) 0%,
-      rgba(252, 176, 69, 1) 20%,
-      rgba(253, 29, 248, 1) 70%,
-      rgba(58, 122, 180, 1) 90%
-    );
+    background: radial-gradient(circle, #f8bbd0 0%, #fff5ca 50%, #f8bbf0 100%);
 
-    background-position: 50% 0; /* Centra el gradiente en la parte superior */
+    /* Centra el gradiente en la parte superior */
     /* Recorta para mostrar solo la mitad superior */
   }
 </style>
