--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -3,16 +3,16 @@
 ---
 
 <header
-  class="relative flex items-center justify-center gap-4 py-4 bg-white/10"
+  class="relative flex items-center justify-center gap-4 py-4 bg-black/10"
 >
   <img
     class="rounded-full kokorumis"
     src="/src/assets/logo.webp"
     alt="Kokorumis logo"
-    width="80"
-    height="80"
+    width="60"
+    height="60"
   />
-  <h1 class="text-4xl font-Chewy text-white kokorumis">Kokorumis</h1>
+  <h1 class="text-4xl font-Chewy text-fontColor kokorumis">Kokorumis</h1>
 </header>
 
 <style>
