--- a/src/sections/Landing.astro
+++ b/src/sections/Landing.astro
@@ -1,29 +1,37 @@
 ---
-
+import { Image } from "astro:assets";
+import calcifero from "../assets/calcifer.webp";
+import star from "../assets/star.png";
+import melody from "../assets/melody.webp";
 ---
 
-<section class="flex flex-row items-center justify-around gap-4 py-4 mt-20">
-  <img
+<section class="flex flex-row items-center justify-around gap-4 py-4 mt-10">
+  <Image
     class="rounded-2xl appear"
-    src="/src/assets/calcifer.webp"
-    alt="Calcifer Image"
-    width="30%"
+    loading="eager"
+    src={melody}
+    alt="Melody"
+    height={500}
   />
-  <img
+
+  <Image
     class="rounded-2xl absolute star-movement"
-    src="/src/assets/star.png"
-    alt="Calcifer Image"
-    width="5%"
+    loading="eager"
+    src={star}
+    alt="Star"
+    width={100}
   />
-  <img
-    class="rounded-2xl absolute right-1 bottom-20 star-movement"
-    src="/src/assets/star.png"
-    alt="Calcifer Image"
-    width="5%"
+  <Image
+    class="rounded-2xl absolute right-1 top-[500px] star-movement"
+    loading="eager"
+    src={star}
+    alt="Star"
+    width={100}
   />
-  <p class="flex flex-col items-center gap-4 text-white appear">
-    <span class="text-8xl font-Chewy text-white">Make it posible!</span>
-    <span class="text-4xl font-Chewy text-white">Crafts & crochet</span>
+
+  <p class="flex flex-col items-center gap-4 text-fontColor appear">
+    <span class="text-8xl font-Chewy text-fontColor">Make it posible!</span>
+    <span class="text-4xl font-Chewy text-fontColor">Crafts & crochet</span>
   </p>
 </section>
 <style>
