Cambio de img por Image

--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -1,11 +1,11 @@
 ---
-
+import Image from "astro/components/Image.astro";
 ---
 
 <header
   class="relative flex items-center justify-center gap-4 py-4 bg-black/10"
 >
-  <img
+  <Image
     class="rounded-full kokorumis"
     src="/src/assets/logo.webp"
     alt="Kokorumis logo"
