--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -1,5 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
+import Logo from "/src/assets/logo.webp";
 ---
 
 <header
@@ -7,7 +8,7 @@ import Image from "astro/components/Image.astro";
 >
   <Image
     class="rounded-full kokorumis"
-    src="/src/assets/logo.webp"
+    src={Logo}
     alt="Kokorumis logo"
     width="60"
     height="60"
