Correcion de importacion de imagenes

--- a/src/sections/Landing.astro
+++ b/src/sections/Landing.astro
@@ -1,8 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import calcifero from "../assets/calcifer.webp";
-import star from "../assets/star.png";
-import melody from "../assets/melody.webp";
+import star from "../../public/img/star.png";
+import melody from "../../public/img/melody.webp";
 ---
 
 <section class="flex flex-row items-center justify-around gap-4 py-4 mt-10">
