--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -1,6 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
-import Logo from "/src/assets/logo.webp";
+import Logo from "../../public/img/logo.webp";
 ---
 
 <header
