--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -1,22 +1,28 @@
 ---
-import Image from "astro/components/Image.astro";
-import Logo from "../../public/img/logo.webp";
+import Image from 'astro/components/Image.astro';
+import Logo from '../../public/img/logo.webp';
 ---
 
 <header
-  class="relative flex items-center justify-center gap-4 py-2 bg-black/10"
+  class="fixed flex w-full items-center justify-center gap-4 bg-white/30 py-1"
 >
   <Image
-    class="rounded-full kokorumis"
+    class="kokorumis rounded-full"
     src={Logo}
     alt="Kokorumis logo"
     width="60"
     height="60"
+    loading={'eager'}
   />
-  <h1 class="text-4xl font-Chewy text-fontColor kokorumis">Kokorumis</h1>
+  <h1 class="kokorumis font-Chewy text-4xl text-fontColor">Kokorumis</h1>
 </header>
 
 <style>
+  header {
+    top: 0;
+    left: 0;
+    z-index: 99999;
+  }
   .kokorumis {
     animation-name: bounceInTop;
     animation-duration: 1s;
