Correccion renombramiento de clase css y uso

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import Header from '../sections/Header.astro';
       rel="stylesheet"
     />
   </head>
-  <body class="relative headerColor">
+  <body class="bodyColor relative">
     <Header />
     <slot />
   </body>
@@ -30,7 +30,7 @@ import Header from '../sections/Header.astro';
     width: 100%;
     height: 100%;
   }
-  .headerColor {
+  .bodyColor {
     background: radial-gradient(circle, #f8bbd0 0%, #fff5ca 50%, #f8bbf0 100%);
 
     /* Centra el gradiente en la parte superior */
