--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import Header from '../sections/Header.astro';
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="img/logo.webp" />
     <meta name="generator" content={Astro.generator} />
     <title>Astro Basics</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,8 +32,5 @@ import Header from '../sections/Header.astro';
   }
   .bodyColor {
     background: radial-gradient(circle, #f8bbd0 0%, #fff5ca 50%, #f8bbf0 100%);
-
-    /* Centra el gradiente en la parte superior */
-    /* Recorta para mostrar solo la mitad superior */
   }
 </style>
