--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -23,7 +23,7 @@ import Logo from '../../public/img/logo.webp';
     top: 0;
     left: 0;
     z-index: 99999;
-    background-color: transparent;
+    background-color: rgb(255 255 255 / 0.3);
     transition:
       background-color 0.3s ease,
       color 0.3s ease;
@@ -85,6 +85,7 @@ import Logo from '../../public/img/logo.webp';
     }
   }
   .scrolled {
-    background-color: white;
+    background-color: rgb(255 255 255 / 0.1);
+    backdrop-filter: blur(4px);
   }
 </style>
