--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import Header from '../sections/Header.astro';
     />
   </head>
   <body class="bodyColor relative">
-    <Header />
+    <Header client:load />
     <slot />
   </body>
 </html>
