--- a/src/sections/Landing.astro
+++ b/src/sections/Landing.astro
@@ -1,7 +1,6 @@
 ---
 import { Image } from 'astro:assets';
 import star from '../../public/img/star.png';
-import melody from '../../public/img/melody.webp';
 import Carousel from '../components/Carousel.vue';
 ---
 
@@ -23,21 +22,41 @@ import Carousel from '../components/Carousel.vue';
       alt="Star"
     />
 
-    <p class="appear flex flex-col items-center gap-4 text-fontColor">
-      <span class="font-Chewy text-6xl text-fontColor md:text-8xl"
-        >Make it posible!</span
-      >
-      <span class="font-Chewy text-4xl text-fontColor">Crafts & crochet</span>
+    <p class="wave-text mb-4 flex items-center justify-center text-fontColor">
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">M</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">a</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">k</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">e</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">&nbsp;</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">i</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">t</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">&nbsp;</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">p</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">o</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">s</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">i</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">b</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">l</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">e</span>
+      <span class="font-Chewy text-6xl text-fontColor md:text-8xl">!</span>
     </p>
-    <div
-      class="mt-20 flex flex-col items-center justify-center gap-4 md:hidden"
-    >
-      <button
-        class="before:ease hover:before:-translate-x- relative h-12 w-40 overflow-hidden rounded-full border border-fontColor bg-fontColor font-Chewy text-sm text-white shadow-2xl transition-all before:absolute before:right-0 before:top-0 before:h-12 before:w-6 before:translate-x-12 before:rotate-6 before:bg-white before:opacity-10 before:duration-700 hover:shadow-fontColor hover:before:-translate-x-40"
-      >
-        Cotizador de precio
-      </button>
-    </div>
+    <p class="wave-text-subtitle flex items-center justify-center">
+      <span class="font-Chewy text-4xl text-fontColor">C</span>
+      <span class="font-Chewy text-4xl text-fontColor">r</span>
+      <span class="font-Chewy text-4xl text-fontColor">a</span>
+      <span class="font-Chewy text-4xl text-fontColor">f</span>
+      <span class="font-Chewy text-4xl text-fontColor">t</span>
+      <span class="font-Chewy text-4xl text-fontColor">&nbsp;</span>
+      <span class="font-Chewy text-4xl text-fontColor">&</span>
+      <span class="font-Chewy text-4xl text-fontColor">&nbsp;</span>
+      <span class="font-Chewy text-4xl text-fontColor">c</span>
+      <span class="font-Chewy text-4xl text-fontColor">r</span>
+      <span class="font-Chewy text-4xl text-fontColor">o</span>
+      <span class="font-Chewy text-4xl text-fontColor">c </span>
+      <span class="font-Chewy text-4xl text-fontColor">h</span>
+      <span class="font-Chewy text-4xl text-fontColor">e</span>
+      <span class="font-Chewy text-4xl text-fontColor">t</span>
+    </p>
     <div class="mt-20 hidden flex-col items-center gap-4 md:flex">
       <button
         class="before:ease relative h-16 w-80 overflow-hidden rounded-full border border-fontColor bg-fontColor font-Chewy text-lg text-white shadow-2xl transition-all before:absolute before:right-0 before:top-0 before:h-16 before:w-6 before:translate-x-12 before:rotate-6 before:bg-white before:opacity-10 before:duration-700 hover:shadow-fontColor hover:before:-translate-x-80"
@@ -45,51 +64,185 @@ import Carousel from '../components/Carousel.vue';
         Cotizador de precio
       </button>
     </div>
+    <div
+      class="appear mt-20 flex flex-col items-center justify-center gap-4 md:hidden"
+    >
+      <button
+        class="before:ease hover:before:-translate-x- relative h-12 w-40 overflow-hidden rounded-full border border-fontColor bg-fontColor font-Chewy text-sm text-white shadow-2xl transition-all before:absolute before:right-0 before:top-0 before:h-12 before:w-6 before:translate-x-12 before:rotate-6 before:bg-white before:opacity-10 before:duration-700 hover:shadow-fontColor hover:before:-translate-x-40"
+      >
+        Cotizador de precio
+      </button>
+    </div>
   </div>
-
-  <style>
-    .star-movement {
-      animation:
-        appear 1s,
-        star-movement 2s infinite;
-    }
-    @keyframes star-movement {
-      0% {
-        -webkit-transform: rotate(0);
-        transform: rotate(0);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-      }
-
-      55% {
-        -webkit-transform: rotate(0.1turn);
-        transform: rotate(0.1turn);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-      }
-
-      100% {
-        -webkit-transform: rotate(0);
-        transform: rotate(0);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-      }
-    }
-    .appear {
-      animation-name: appear;
-      animation-duration: 1s;
-    }
-    @keyframes appear {
-      0% {
-        opacity: 0;
-        -webkit-transform: translateY(-100px);
-        transform: translateY(-100px);
-      }
-      100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-      }
-    }
-  </style>
 </section>
+
+<style>
+  .star-movement {
+    animation:
+      appear 1s,
+      star-movement 2s infinite;
+  }
+  @keyframes star-movement {
+    0% {
+      -webkit-transform: rotate(0);
+      transform: rotate(0);
+      -webkit-animation-timing-function: ease-in;
+      animation-timing-function: ease-in;
+    }
+
+    55% {
+      -webkit-transform: rotate(0.1turn);
+      transform: rotate(0.1turn);
+      -webkit-animation-timing-function: ease-in;
+      animation-timing-function: ease-in;
+    }
+
+    100% {
+      -webkit-transform: rotate(0);
+      transform: rotate(0);
+      -webkit-animation-timing-function: ease-in;
+      animation-timing-function: ease-in;
+    }
+  }
+  .appear {
+    animation-name: appear;
+    animation-duration: 1s;
+  }
+  @keyframes appear {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(-100px);
+      transform: translateY(-100px);
+    }
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes appear-wave {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes wave {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  .wave-text span {
+    opacity: 0;
+    animation:
+      wave 1s ease-in-out,
+      appear-wave 0.5s ease-in-out forwards;
+  }
+  .wave-text-subtitle span {
+    animation-delay: calc(1.5s + var(--delay, 0s));
+    opacity: 0;
+    animation:
+      wave 1s ease-in-out,
+      appear-wave 0.5s ease-in-out forwards;
+  }
+
+  /* Aplicamos delays progresivos */
+  .wave-text span:nth-child(1) {
+    animation-delay: 0s;
+  }
+  .wave-text span:nth-child(2) {
+    animation-delay: 0.01s;
+  }
+  .wave-text span:nth-child(3) {
+    animation-delay: 0.02s;
+  }
+  .wave-text span:nth-child(4) {
+    animation-delay: 0.03s;
+  }
+
+  .wave-text span:nth-child(6) {
+    animation-delay: 0.1s;
+  }
+  .wave-text span:nth-child(7) {
+    animation-delay: 0.2s;
+  }
+
+  .wave-text span:nth-child(9) {
+    animation-delay: 0.3s;
+  }
+  .wave-text span:nth-child(10) {
+    animation-delay: 0.4s;
+  }
+  .wave-text span:nth-child(11) {
+    animation-delay: 0.5s;
+  }
+  .wave-text span:nth-child(12) {
+    animation-delay: 0.6s;
+  }
+  .wave-text span:nth-child(13) {
+    animation-delay: 0.7s;
+  }
+  .wave-text span:nth-child(14) {
+    animation-delay: 0.8s;
+  }
+  .wave-text span:nth-child(15) {
+    animation-delay: 0.9s;
+  }
+  .wave-text span:nth-child(16) {
+    animation-delay: 1s;
+  }
+
+  .wave-text-subtitle span:nth-child(1) {
+    animation-delay: 1.1s;
+  }
+  .wave-text-subtitle span:nth-child(2) {
+    animation-delay: 1.2s;
+  }
+  .wave-text-subtitle span:nth-child(3) {
+    animation-delay: 1.3s;
+  }
+  .wave-text-subtitle span:nth-child(4) {
+    animation-delay: 1.4s;
+  }
+  .wave-text-subtitle span:nth-child(5) {
+    animation-delay: 1.5s;
+  }
+  .wave-text-subtitle span:nth-child(6) {
+    animation-delay: 1.6s;
+  }
+  .wave-text-subtitle span:nth-child(7) {
+    animation-delay: 1.7s;
+  }
+  .wave-text-subtitle span:nth-child(8) {
+    animation-delay: 1.8s;
+  }
+  .wave-text-subtitle span:nth-child(9) {
+    animation-delay: 1.9s;
+  }
+  .wave-text-subtitle span:nth-child(10) {
+    animation-delay: 2s;
+  }
+  .wave-text-subtitle span:nth-child(11) {
+    animation-delay: 2.1s;
+  }
+  .wave-text-subtitle span:nth-child(12) {
+    animation-delay: 2.2s;
+  }
+  .wave-text-subtitle span:nth-child(13) {
+    animation-delay: 2.3s;
+  }
+  .wave-text-subtitle span:nth-child(14) {
+    animation-delay: 2.4s;
+  }
+  .wave-text-subtitle span:nth-child(15) {
+    animation-delay: 2.5s;
+  }
+</style>
